// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel should render & hover if optional 1`] = `
<DocumentFragment>
  <label
    class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
    data-testid="FormLabel"
  >
    Test
    <span
      class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
      data-testid="FormLabel__optional"
    >
      optional
    </span>
  </label>
</DocumentFragment>
`;

exports[`FormLabel should render with name from context 1`] = `
<DocumentFragment>
  <label
    class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
    data-testid="FormLabel"
    for="test"
  >
    Test Label
  </label>
</DocumentFragment>
`;
